plugins/scripting/scripting-tests/testData/diagnostics/repl/property_type_anonymous_object.kts

// SNIPPET

val foo = object { val v = "OK" }
foo.v

// SNIPPET

foo.<!UNRESOLVED_REFERENCE!>v<!>
